# EdgeDetectr

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: deploy.yml
backend/: Dockerfile  README.md  package-lock.json  package.json
backend/operators/: CMakeLists.txt  COVERAGE.md  analyze-coverage.sh  main  main.cpp  quick-coverage.sh  run-coverage.sh  simple-coverage.sh
backend/operators/include/gradient/: alt_sobel.h  gradient_operator.h  ocv_prewitt.h  ocv_roberts_cross.h  ocv_sobel.h  omp_sobel.h
backend/operators/include/utils/: image_utils.h  kernels_util.h
backend/operators/src/gradient/: alt_sobel.cpp  ocv_prewitt.cpp  ocv_roberts_cross.cpp  ocv_sobel.cpp  omp_sobel.cpp
backend/operators/src/utils/: image_utils.cpp
backend/operators/test/gradient/: test_alt_sobel.cpp  test_ocv_prewitt.cpp  test_ocv_roberts_cross.cpp  test_ocv_sobel.cpp  test_omp_sobel.cpp  test_utils.cpp  test_utils.h
backend/src/: app.js
backend/src/routes/: operators.js
frontend/: .gitignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: footer.tsx  image-display.tsx  image-processor.tsx  image-upload.tsx  terms-dialog.tsx
frontend/components/ui/: chart.tsx
frontend/lib/: api-utils.ts
frontend/public/: robots.txt  sitemap.xml
nginx/: edgedetectr.conf
